# ugc_video_variator

./: .gitignore  README.md  env.example  pyproject.toml
src/: main.py  settings.py
src/analysis/: timeline.py
src/backends/: base.py  kling.py
src/render/: text_transfer.py
src/util/: ffmpeg_io.py  logging.py
tests/: test_cli_smoke.py
